# dummyjson-api-tests

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: simple-allure.yml  test-with-pages.yml  test.yml
1/data/: suites.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: history.json
1/widgets/: duration-trend.json  severity.json  status-chart.json  summary.json
2/: index.html
2/data/: packages.json  suites.json  timeline.json
2/export/: influxDbData.txt  prometheusData.txt
2/widgets/: severity.json  status-chart.json  summary.json
3/: index.html
3/data/: behaviors.json  suites.csv  timeline.json
3/history/: duration-trend.json
4/data/: behaviors.csv  behaviors.json  suites.csv  suites.json  timeline.json
4/export/: prometheusData.txt
4/widgets/: severity.json  status-chart.json
5/: index.html
5/data/: behaviors.csv  suites.csv  timeline.json
5/export/: prometheusData.txt
5/history/: history.json
5/widgets/: status-chart.json
6/: index.html
6/data/: packages.json  suites.json  timeline.json
6/history/: duration-trend.json  history.json
6/widgets/: behaviors.json  duration.json  severity.json
7/: index.html
7/data/: behaviors.csv  behaviors.json  suites.csv  suites.json  timeline.json
7/history/: duration-trend.json
7/widgets/: severity.json  summary.json
base/: __init__.py
base/api/: __init__.py  api_client.py
base/models/: __init__.py  base_model.py
docs/: ALLURE_REPORTS.md
dummyjson/: __init__.py
latest/: index.html
tools/: __init__.py  run_with_allure.py
(+167 files in other folders)
